Promote the int to a float so that the calcualtion works properly.  Patch from Stephen Booth.

BUG:143938


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@689510 283d02a7-25f6-0310-bc7c-ecb5cbfe19da